# KAP

./: KAP.cabal  LICENSE  stack.yaml
app/: 1_PodOnFleaSRB.hs  2_PodOnThumperSRB.hs  3_RadialSRBs.hs  4_ControlledAscent.hs  5_DeorbitBurn.hs  6_ExecuteNextNode.hs
src/: Lib.hs
src/Control/: Attitude.hs
src/Utils/: Physics.hs  Streams.hs  Vectors.hs
