name:                KAP
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , exceptions
                     , krpc-hs
  default-language:    Haskell2010

executable 1_PodOnFleaSRB
  hs-source-dirs:      app
  main-is:             1_PodOnFleaSRB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010
