name:                KAP
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Utils.Streams
                     , Utils.Vectors
                     , Control.Attitude
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , linear
                     , text
                     , exceptions
                     , krpc-hs
  default-language:    Haskell2010


executable 1_PodOnFleaSRB
  hs-source-dirs:      app
  main-is:             1_PodOnFleaSRB.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010


executable 2_PodOnThumperSRB
  hs-source-dirs:      app
  main-is:             2_PodOnThumperSRB.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010


executable 3_RadialSRBs
  hs-source-dirs:      app
  main-is:             3_RadialSRBs.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010


executable 4_ControlledAscent
  hs-source-dirs:      app
  main-is:             4_ControlledAscent.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , async
                     , linear
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010


executable 5_DeorbitBurn
  hs-source-dirs:      app
  main-is:             5_DeorbitBurn.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , async
                     , linear
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010


executable 6_ExecuteNextNode
  hs-source-dirs:      app
  main-is:             6_ExecuteNextNode.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , exceptions
                     , async
                     , linear
                     , krpc-hs
                     , KAP
  default-language:    Haskell2010
